--- a/index.html
+++ b/index.html
@@ -2,104 +2,117 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Tirumala TVS | Authorized TVS Dealer in Bidarahalli, Bengaluru</title>
+  <title>Tirumala TVS | Authorized TVS Dealer in Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Tirumala TVS is an authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes, scooters, electric vehicles, service, finance and test rides." />
+  <meta name="description" content="Tirumala TVS – Authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes, scooters, electric vehicles, service, finance and test rides." />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
 
 <!-- HEADER -->
-<header style="background:#fff;border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
+<header style="background:#ffffff;border-bottom:1px solid #e5e7eb;">
+  <div style="max-width:1200px;margin:auto;padding:14px 16px;display:flex;justify-content:space-between;align-items:center;">
     <h2 style="margin:0;">Tirumala TVS</h2>
     <nav>
-      <a href="index.html" style="margin-right:20px;">Home</a>
-      <a href="models.html" style="margin-right:20px;">Models</a>
+      <a href="index.html" style="margin-right:18px;">Home</a>
+      <a href="models.html" style="margin-right:18px;">Models</a>
       <a href="contacts.html">Contact</a>
     </nav>
   </div>
 </header>
 
 <!-- HERO -->
-<section style="position:relative;height:70vh;background:#000;">
-  <div style="position:absolute;inset:0;background:url('assets/hero-bike.jpg') center/cover no-repeat;opacity:0.35;"></div>
+<section style="position:relative;background:linear-gradient(120deg,#0b4fd8,#1e40af);color:#fff;">
+  <div style="max-width:1200px;margin:auto;padding:70px 16px 60px;">
+    <span style="display:inline-block;background:#22c55e;padding:6px 12px;border-radius:999px;font-size:13px;margin-bottom:12px;">
+      Authorized TVS Dealer
+    </span>
 
-  <div style="position:relative;z-index:2;height:100%;display:flex;align-items:center;">
-    <div style="max-width:1200px;margin:auto;padding:0 16px;color:#fff;">
-      <h1 style="font-size:48px;margin-bottom:12px;">
-        Explore TVS Two-Wheelers
-      </h1>
-      <p style="font-size:20px;max-width:720px;margin-bottom:30px;">
-        Bikes, scooters and electric vehicles from India’s trusted two-wheeler brand.
-        Visit Tirumala TVS for sales, service, finance and test rides.
-      </p>
+    <h1 style="font-size:46px;margin:12px 0;">
+      Discover the Right TVS Two-Wheeler
+    </h1>
 
+    <p style="font-size:19px;max-width:720px;">
+      From everyday scooters to performance motorcycles and electric mobility —
+      Tirumala TVS brings you the complete TVS range with trusted service support.
+    </p>
+
+    <div style="margin-top:28px;">
       <a href="models.html"
-         style="padding:14px 34px;background:#e11d48;color:#fff;border-radius:6px;text-decoration:none;font-weight:600;">
-        View TVS Models
+         style="padding:14px 34px;background:#e11d48;color:#fff;border-radius:8px;text-decoration:none;font-weight:600;margin-right:14px;">
+        Browse Models
+      </a>
+      <a href="contacts.html"
+         style="padding:14px 34px;background:#ffffff;color:#0b4fd8;border-radius:8px;text-decoration:none;font-weight:600;">
+        Book Test Ride
       </a>
     </div>
   </div>
 </section>
 
-<!-- DEALER INFO STRIP -->
-<section style="background:#f5f7fb;">
-  <div style="max-width:1200px;margin:auto;padding:24px 16px;">
-    <strong>📍 Tirumala TVS – Bidarahalli, Bengaluru</strong><br>
-    Authorized TVS Dealer | Sales • Service • Genuine Spare Parts • Finance & Insurance
+<!-- INFO STRIP -->
+<section style="background:#fef3c7;">
+  <div style="max-width:1200px;margin:auto;padding:18px 16px;font-size:15px;">
+    📍 <strong>Bidarahalli, Bengaluru</strong> &nbsp;|&nbsp;
+    Sales • Service • Genuine Spare Parts • Finance • Insurance
   </div>
 </section>
 
-<!-- ABOUT TVS & DEALERSHIP -->
-<section style="max-width:1200px;margin:auto;padding:60px 16px;">
-  <h2>About Tirumala TVS</h2>
-  <p style="max-width:900px;">
-    Tirumala TVS is an authorized dealership of TVS Motor Company, serving customers
-    in and around Bidarahalli, Bengaluru. We help customers choose the right
-    two-wheeler by offering transparent information, test rides, finance assistance
-    and reliable after-sales support.
-  </p>
+<!-- QUICK CATEGORIES -->
+<section style="max-width:1200px;margin:auto;padding:50px 16px;">
+  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:22px;">
 
-  <p style="max-width:900px;">
-    TVS Motor Company is one of India’s most respected two-wheeler manufacturers,
-    known for innovation, performance, fuel efficiency and long-term reliability.
-  </p>
+    <div class="model-card" style="background:#eff6ff;">
+      <h3>🛵 Scooters</h3>
+      <p>Comfortable, fuel-efficient scooters for daily commuting.</p>
+      <a href="models.html">View Scooters →</a>
+    </div>
+
+    <div class="model-card" style="background:#f0fdf4;">
+      <h3>🏍 Motorcycles</h3>
+      <p>Sporty commuters to premium performance bikes.</p>
+      <a href="models.html">View Motorcycles →</a>
+    </div>
+
+    <div class="model-card" style="background:#fff7ed;">
+      <h3>⚡ Electric</h3>
+      <p>Smart electric scooters with low running cost.</p>
+      <a href="models/iqube.html">View iQube →</a>
+    </div>
+
+  </div>
 </section>
 
-<!-- PRODUCT CATEGORIES -->
+<!-- POPULAR MODELS -->
 <section style="background:#f9fafb;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h2>TVS Product Range</h2>
+  <div style="max-width:1200px;margin:auto;padding:50px 16px;">
+    <h2 style="margin-bottom:24px;">Popular TVS Models</h2>
 
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:24px;">
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;">
 
       <div class="model-card">
-        <h3>🛵 Scooters</h3>
-        <p>
-          TVS scooters are designed for comfort, mileage and everyday convenience.
-          Popular models include Jupiter (110 & 125), Ntorq 125 and Zest 110.
-        </p>
-        <a href="models.html">Explore Scooters →</a>
+        <h3>TVS XL 100</h3>
+        <p>Reliable moped for business & daily work.</p>
+        <a href="models/xl100.html">View Details →</a>
       </div>
 
       <div class="model-card">
-        <h3>🏍 Motorcycles</h3>
-        <p>
-          From commuter bikes like Raider to premium motorcycles like Apache RR 310
-          and Ronin, TVS offers something for every riding style.
-        </p>
-        <a href="models.html">Explore Motorcycles →</a>
+        <h3>TVS Jupiter 125</h3>
+        <p>Premium family scooter with comfort.</p>
+        <a href="models/jupiter125.html">View Details →</a>
       </div>
 
       <div class="model-card">
-        <h3>⚡ Electric Vehicles</h3>
-        <p>
-          TVS iQube electric scooter delivers smooth performance, smart connectivity
-          and low running cost for city commuting.
-        </p>
-        <a href="models/iqube.html">Explore iQube →</a>
+        <h3>TVS Ntorq 125</h3>
+        <p>Sporty scooter with SmartXonnect.</p>
+        <a href="models/ntorq125.html">View Details →</a>
+      </div>
+
+      <div class="model-card">
+        <h3>TVS Raider</h3>
+        <p>Sporty commuter motorcycle.</p>
+        <a href="models/raider.html">View Details →</a>
       </div>
 
     </div>
@@ -107,57 +120,47 @@
 </section>
 
 <!-- SERVICES -->
-<section style="max-width:1200px;margin:auto;padding:60px 16px;">
-  <h2>Sales, Service & Support</h2>
+<section style="max-width:1200px;margin:auto;padding:50px 16px;">
+  <h2 style="margin-bottom:22px;">Sales, Service & Support</h2>
 
-  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:24px;">
+  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:22px;">
 
-    <div class="model-card">
+    <div class="model-card" style="border-left:6px solid #0b4fd8;">
       <h3>New Vehicle Sales</h3>
-      <p>
-        Get latest TVS models with transparent pricing. Prices are displayed as
-        <strong>“starting from”</strong> and may vary by variant.
-      </p>
-      <a href="models.html">View Models →</a>
+      <p>Latest TVS models with transparent “starting from” pricing.</p>
     </div>
 
-    <div class="model-card">
-      <h3>Service Appointments</h3>
-      <p>
-        Authorized TVS service using genuine spare parts and trained technicians.
-      </p>
-      <a href="contacts.html">Book Service →</a>
+    <div class="model-card" style="border-left:6px solid #22c55e;">
+      <h3>Authorized Service</h3>
+      <p>Genuine spare parts & trained technicians.</p>
     </div>
 
-    <div class="model-card">
-      <h3>Test Rides & Finance</h3>
-      <p>
-        Book test rides, get EMI options, insurance support and exchange assistance.
-      </p>
-      <a href="contacts.html">Enquire Now →</a>
+    <div class="model-card" style="border-left:6px solid #e11d48;">
+      <h3>Finance & Insurance</h3>
+      <p>Easy EMI, insurance & exchange support.</p>
     </div>
 
   </div>
 </section>
 
 <!-- LOCATION -->
-<section style="background:#f5f7fb;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h2>Visit Our Showroom</h2>
-    <p>
+<section style="background:#0b4fd8;color:#fff;">
+  <div style="max-width:1200px;margin:auto;padding:50px 16px;">
+    <h2>Visit Tirumala TVS</h2>
+    <p style="max-width:800px;">
       D Cross, Bidarahalli Main Road, Cheemasandra,<br>
       Bengaluru, Karnataka – 560049
     </p>
     <p>
-      📞 <strong>Phone / WhatsApp:</strong> 9964946512<br>
-      📧 <strong>Email:</strong> tirumalatvs716@gmail.com
+      📞 9964946512 &nbsp;|&nbsp;
+      📧 tirumalatvs716@gmail.com
     </p>
   </div>
 </section>
 
 <!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
+<footer style="background:#ffffff;border-top:1px solid #e5e7eb;">
+  <div style="max-width:1200px;margin:auto;padding:18px 16px;text-align:center;font-size:14px;">
     © 2026 Tirumala TVS. All rights reserved.
   </div>
 </footer>
