--- a/models.html
+++ b/models.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>TVS Models | Bikes, Scooters & EVs – Tirumala TVS</title>
+  <title>TVS Models | Tirumala TVS Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Explore all TVS bikes, scooters and electric vehicles at Tirumala TVS, Bengaluru. View specifications, prices and features." />
+  <meta name="description" content="Browse all TVS bikes, scooters and electric vehicles at Tirumala TVS, Bidarahalli Bengaluru." />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -12,109 +12,97 @@
 
 <!-- HEADER -->
 <header style="background:#fff;border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
+  <div style="max-width:1200px;margin:auto;padding:14px 16px;display:flex;justify-content:space-between;align-items:center;">
     <h2 style="margin:0;">Tirumala TVS</h2>
     <nav>
-      <a href="index.html" style="margin-right:20px;">Home</a>
-      <a href="models.html" style="margin-right:20px;font-weight:600;">Models</a>
+      <a href="index.html" style="margin-right:18px;">Home</a>
+      <a href="models.html" style="margin-right:18px;font-weight:600;">Models</a>
       <a href="contacts.html">Contact</a>
     </nav>
   </div>
 </header>
 
 <!-- HERO -->
-<section style="background:#0b4fd8;color:#fff;">
+<section style="background:linear-gradient(120deg,#1e40af,#0b4fd8);color:#fff;">
   <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:44px;margin-bottom:12px;">TVS Two-Wheelers</h1>
-    <p style="font-size:18px;max-width:800px;opacity:0.95;">
-      Browse the complete range of TVS bikes, scooters and electric vehicles
-      available at Tirumala TVS, Bidarahalli – Bengaluru.
+    <h1 style="font-size:44px;margin-bottom:10px;">Explore TVS Models</h1>
+    <p style="font-size:18px;max-width:800px;">
+      Scooters, motorcycles and electric vehicles from TVS Motor Company.
+      Click any model to view price, specifications and features.
     </p>
   </div>
 </section>
 
-<!-- CONTENT -->
-<main style="max-width:1200px;margin:auto;padding:70px 16px;">
+<!-- MODELS -->
+<main style="max-width:1200px;margin:auto;padding:50px 16px;">
 
   <!-- SCOOTERS -->
-  <section style="margin-bottom:80px;">
-    <h2 style="margin-bottom:26px;">🛵 TVS Scooters</h2>
+  <section style="margin-bottom:70px;">
+    <h2>🛵 TVS Scooters</h2>
 
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:28px;">
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:22px;margin-top:22px;">
 
-      <div class="model-card">
+      <div class="model-card" style="background:#eff6ff;">
         <h3>TVS XL 100</h3>
-        <p>Reliable moped for work, delivery and daily business use.</p>
-        <a href="models/xl100.html">View Specs & Price →</a>
+        <p>Legendary moped trusted for business & daily work.</p>
+        <a href="models/xl100.html">View Details →</a>
       </div>
 
-      <div class="model-card">
+      <div class="model-card" style="background:#f0fdf4;">
         <h3>TVS Zest 110</h3>
-        <p>Lightweight and stylish scooter for effortless city rides.</p>
-        <a href="models/zest110.html">View Specs & Price →</a>
+        <p>Lightweight scooter for smooth city rides.</p>
+        <a href="models/zest110.html">View Details →</a>
       </div>
 
-      <div class="model-card">
+      <div class="model-card" style="background:#fff7ed;">
         <h3>TVS Jupiter 113</h3>
-        <p>Comfort-focused family scooter with smooth performance.</p>
-        <a href="models/jupiter113.html">View Specs & Price →</a>
+        <p>Comfort-first family scooter.</p>
+        <a href="models/jupiter113.html">View Details →</a>
       </div>
 
-      <div class="model-card">
+      <div class="model-card" style="background:#fef2f2;">
         <h3>TVS Jupiter 125</h3>
-        <p>Premium scooter with strong engine and class-leading comfort.</p>
-        <a href="models/jupiter125.html">View Specs & Price →</a>
+        <p>Premium performance scooter.</p>
+        <a href="models/jupiter125.html">View Details →</a>
       </div>
 
-      <div class="model-card">
+      <div class="model-card" style="background:#ecfeff;">
         <h3>TVS Ntorq 125</h3>
-        <p>Sporty performance scooter with SmartXonnect technology.</p>
-        <a href="models/ntorq125.html">View Specs & Price →</a>
+        <p>Sporty scooter with SmartXonnect.</p>
+        <a href="models/ntorq125.html">View Details →</a>
       </div>
 
-      <div class="model-card">
+      <div class="model-card" style="background:#fdf4ff;">
         <h3>TVS Ntorq 150</h3>
-        <p>High-performance scooter with racing DNA and aggressive styling.</p>
-        <a href="models/ntorq150.html">View Specs & Price →</a>
+        <p>High-performance racing scooter.</p>
+        <a href="models/ntorq150.html">View Details →</a>
       </div>
 
     </div>
   </section>
 
   <!-- MOTORCYCLES -->
-  <section style="margin-bottom:80px;">
-    <h2 style="margin-bottom:26px;">🏍 TVS Motorcycles</h2>
+  <section style="margin-bottom:70px;">
+    <h2>🏍 TVS Motorcycles</h2>
 
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:28px;">
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:22px;margin-top:22px;">
 
-      <div class="model-card">
+      <div class="model-card" style="background:#f0fdf4;">
         <h3>TVS Raider</h3>
-        <p>Sporty 125cc motorcycle with strong performance and modern design.</p>
-        <a href="models/raider.html">View Specs & Price →</a>
+        <p>Sporty commuter motorcycle.</p>
+        <a href="models/raider.html">View Details →</a>
       </div>
 
-      <div class="model-card">
+      <div class="model-card" style="background:#fff7ed;">
         <h3>TVS Ronin</h3>
-        <p>Modern-retro motorcycle built for comfort and relaxed riding.</p>
-        <a href="models/ronin.html">View Specs & Price →</a>
+        <p>Modern-retro premium motorcycle.</p>
+        <a href="models/ronin.html">View Details →</a>
       </div>
 
-      <div class="model-card">
-        <h3>TVS Apache RTR 160</h3>
-        <p>Race-bred motorcycle with agile handling and strong mid-range.</p>
-        <a href="models/apache160.html">View Details →</a>
-      </div>
-
-      <div class="model-card">
-        <h3>TVS Apache RTR 200</h3>
-        <p>Advanced performance bike with ride modes and ABS.</p>
-        <a href="models/apache160.html#rtr200">View Details →</a>
-      </div>
-
-      <div class="model-card">
-        <h3>TVS Apache RR 310</h3>
-        <p>Premium fully-faired sport motorcycle with track-level technology.</p>
-        <a href="models/apache160.html#rr310">View Details →</a>
+      <div class="model-card" style="background:#eff6ff;">
+        <h3>Apache RTR Series</h3>
+        <p>160, 200 & RR 310 performance motorcycles.</p>
+        <a href="models/apache160.html">View Apache Range →</a>
       </div>
 
     </div>
@@ -122,13 +110,13 @@
 
   <!-- ELECTRIC -->
   <section>
-    <h2 style="margin-bottom:26px;">⚡ TVS Electric Vehicles</h2>
+    <h2>⚡ Electric Vehicles</h2>
 
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:28px;">
-      <div class="model-card">
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:22px;margin-top:22px;">
+      <div class="model-card" style="background:#f0fdf4;">
         <h3>TVS iQube</h3>
-        <p>Smart, connected and eco-friendly electric scooter for urban mobility.</p>
-        <a href="models/iqube.html">View Specs & Price →</a>
+        <p>Smart electric scooter for urban mobility.</p>
+        <a href="models/iqube.html">View Details →</a>
       </div>
     </div>
   </section>
@@ -136,8 +124,8 @@
 </main>
 
 <!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:80px;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
+<footer style="border-top:1px solid #e5e7eb;">
+  <div style="max-width:1200px;margin:auto;padding:18px 16px;text-align:center;">
     © 2026 Tirumala TVS. All rights reserved.
   </div>
 </footer>
