--- a/index.html
+++ b/index.html
@@ -1,169 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Tirumala TVS | Authorized TVS Dealer in Bengaluru</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Tirumala TVS – Authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes, scooters, electric vehicles, service, finance and test rides." />
-  <link rel="stylesheet" href="css/style.css" />
-</head>
-
-<body>
-
-<!-- HEADER -->
-<header style="background:#ffffff;border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:14px 16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
-    <nav>
-      <a href="index.html" style="margin-right:18px;">Home</a>
-      <a href="models.html" style="margin-right:18px;">Models</a>
-      <a href="contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
-
-<!-- HERO -->
-<section style="position:relative;background:linear-gradient(120deg,#0b4fd8,#1e40af);color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:70px 16px 60px;">
-    <span style="display:inline-block;background:#22c55e;padding:6px 12px;border-radius:999px;font-size:13px;margin-bottom:12px;">
-      Authorized TVS Dealer
-    </span>
-
-    <h1 style="font-size:46px;margin:12px 0;">
-      Discover the Right TVS Two-Wheeler
-    </h1>
-
-    <p style="font-size:19px;max-width:720px;">
-      From everyday scooters to performance motorcycles and electric mobility —
-      Tirumala TVS brings you the complete TVS range with trusted service support.
-    </p>
-
-    <div style="margin-top:28px;">
-      <a href="models.html"
-         style="padding:14px 34px;background:#e11d48;color:#fff;border-radius:8px;text-decoration:none;font-weight:600;margin-right:14px;">
-        Browse Models
-      </a>
-      <a href="contacts.html"
-         style="padding:14px 34px;background:#ffffff;color:#0b4fd8;border-radius:8px;text-decoration:none;font-weight:600;">
-        Book Test Ride
-      </a>
-    </div>
-  </div>
-</section>
-
-<!-- INFO STRIP -->
+<!-- QUICK LINKS GRID -->
 <section style="background:#fef3c7;">
-  <div style="max-width:1200px;margin:auto;padding:18px 16px;font-size:15px;">
-    📍 <strong>Bidarahalli, Bengaluru</strong> &nbsp;|&nbsp;
-    Sales • Service • Genuine Spare Parts • Finance • Insurance
-  </div>
-</section>
+  <div style="max-width:1200px;margin:auto;padding:40px 16px;">
+    <h2 style="margin-bottom:22px;">Quick Actions</h2>
 
-<!-- QUICK CATEGORIES -->
-<section style="max-width:1200px;margin:auto;padding:50px 16px;">
-  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:22px;">
+    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:20px;">
 
-    <div class="model-card" style="background:#eff6ff;">
-      <h3>🛵 Scooters</h3>
-      <p>Comfortable, fuel-efficient scooters for daily commuting.</p>
-      <a href="models.html">View Scooters →</a>
-    </div>
+      <a class="model-card" href="models.html" style="background:#fff;">
+        <h3>🔍 Compare Models</h3>
+        <p>View all TVS models & specifications.</p>
+      </a>
 
-    <div class="model-card" style="background:#f0fdf4;">
-      <h3>🏍 Motorcycles</h3>
-      <p>Sporty commuters to premium performance bikes.</p>
-      <a href="models.html">View Motorcycles →</a>
-    </div>
+      <a class="model-card" href="contacts.html" style="background:#fff;">
+        <h3>📞 Book Test Ride</h3>
+        <p>Schedule a test ride instantly.</p>
+      </a>
 
-    <div class="model-card" style="background:#fff7ed;">
-      <h3>⚡ Electric</h3>
-      <p>Smart electric scooters with low running cost.</p>
-      <a href="models/iqube.html">View iQube →</a>
-    </div>
+      <a class="model-card" href="contacts.html" style="background:#fff;">
+        <h3>🛠 Book Service</h3>
+        <p>Authorized TVS service appointment.</p>
+      </a>
 
-  </div>
-</section>
-
-<!-- POPULAR MODELS -->
-<section style="background:#f9fafb;">
-  <div style="max-width:1200px;margin:auto;padding:50px 16px;">
-    <h2 style="margin-bottom:24px;">Popular TVS Models</h2>
-
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;">
-
-      <div class="model-card">
-        <h3>TVS XL 100</h3>
-        <p>Reliable moped for business & daily work.</p>
-        <a href="models/xl100.html">View Details →</a>
-      </div>
-
-      <div class="model-card">
-        <h3>TVS Jupiter 125</h3>
-        <p>Premium family scooter with comfort.</p>
-        <a href="models/jupiter125.html">View Details →</a>
-      </div>
-
-      <div class="model-card">
-        <h3>TVS Ntorq 125</h3>
-        <p>Sporty scooter with SmartXonnect.</p>
-        <a href="models/ntorq125.html">View Details →</a>
-      </div>
-
-      <div class="model-card">
-        <h3>TVS Raider</h3>
-        <p>Sporty commuter motorcycle.</p>
-        <a href="models/raider.html">View Details →</a>
-      </div>
+      <a class="model-card" href="models/iqube.html" style="background:#fff;">
+        <h3>⚡ Explore EV</h3>
+        <p>Check TVS iQube electric scooter.</p>
+      </a>
 
     </div>
   </div>
 </section>
-
-<!-- SERVICES -->
-<section style="max-width:1200px;margin:auto;padding:50px 16px;">
-  <h2 style="margin-bottom:22px;">Sales, Service & Support</h2>
-
-  <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:22px;">
-
-    <div class="model-card" style="border-left:6px solid #0b4fd8;">
-      <h3>New Vehicle Sales</h3>
-      <p>Latest TVS models with transparent “starting from” pricing.</p>
-    </div>
-
-    <div class="model-card" style="border-left:6px solid #22c55e;">
-      <h3>Authorized Service</h3>
-      <p>Genuine spare parts & trained technicians.</p>
-    </div>
-
-    <div class="model-card" style="border-left:6px solid #e11d48;">
-      <h3>Finance & Insurance</h3>
-      <p>Easy EMI, insurance & exchange support.</p>
-    </div>
-
-  </div>
-</section>
-
-<!-- LOCATION -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:50px 16px;">
-    <h2>Visit Tirumala TVS</h2>
-    <p style="max-width:800px;">
-      D Cross, Bidarahalli Main Road, Cheemasandra,<br>
-      Bengaluru, Karnataka – 560049
-    </p>
-    <p>
-      📞 9964946512 &nbsp;|&nbsp;
-      📧 tirumalatvs716@gmail.com
-    </p>
-  </div>
-</section>
-
-<!-- FOOTER -->
-<footer style="background:#ffffff;border-top:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:18px 16px;text-align:center;font-size:14px;">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
-</footer>
-
-</body>
-</html>
