--- a/index.html
+++ b/index.html
@@ -1,30 +1,113 @@
-<!-- QUICK LINKS GRID -->
-<section style="background:#fef3c7;">
-  <div style="max-width:1200px;margin:auto;padding:40px 16px;">
-    <h2 style="margin-bottom:22px;">Quick Actions</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Tirumala TVS | Authorized TVS Dealer Bengaluru</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Tirumala TVS is an authorized TVS dealer in Bidarahalli, Bengaluru. Explore bikes, scooters, electric vehicles, test rides and service.">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:20px;">
+<body>
 
-      <a class="model-card" href="models.html" style="background:#fff;">
-        <h3>🔍 Compare Models</h3>
-        <p>View all TVS models & specifications.</p>
-      </a>
+<header>
+  <div class="header-container">
+    <h2>Tirumala TVS</h2>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="models.html">Models</a>
+      <a href="contacts.html">Contact</a>
+    </nav>
+  </div>
+</header>
 
-      <a class="model-card" href="contacts.html" style="background:#fff;">
-        <h3>📞 Book Test Ride</h3>
-        <p>Schedule a test ride instantly.</p>
-      </a>
-
-      <a class="model-card" href="contacts.html" style="background:#fff;">
-        <h3>🛠 Book Service</h3>
-        <p>Authorized TVS service appointment.</p>
-      </a>
-
-      <a class="model-card" href="models/iqube.html" style="background:#fff;">
-        <h3>⚡ Explore EV</h3>
-        <p>Check TVS iQube electric scooter.</p>
-      </a>
-
-    </div>
+<section class="hero">
+  <div class="hero-inner">
+    <h1>Authorized TVS Dealer in Bengaluru</h1>
+    <p>
+      Sales • Service • Genuine Spare Parts • Finance & Insurance<br>
+      <strong>Bidarahalli, Bengaluru</strong>
+    </p>
   </div>
 </section>
+
+<main class="container">
+
+  <section>
+    <h2>Quick Actions</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>Browse Models</h3>
+        <p>Explore all TVS bikes, scooters and EVs.</p>
+        <a href="models.html">View Models</a>
+      </div>
+
+      <div class="card">
+        <h3>Book Test Ride</h3>
+        <p>Experience your favourite TVS vehicle.</p>
+        <a href="contacts.html">Book Now</a>
+      </div>
+
+      <div class="card">
+        <h3>Book Service</h3>
+        <p>Authorized service with genuine parts.</p>
+        <a href="contacts.html">Book Service</a>
+      </div>
+
+      <div class="card">
+        <h3>Explore Electric</h3>
+        <p>Discover TVS iQube electric scooters.</p>
+        <a href="models.html#electric">View EVs</a>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Popular TVS Models</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>TVS XL 100</h3>
+        <p>Trusted moped for daily work & business.</p>
+        <a href="models/xl100.html">View Details</a>
+      </div>
+
+      <div class="card">
+        <h3>TVS Jupiter 113</h3>
+        <p>Comfort-first family scooter.</p>
+        <a href="models/jupiter113.html">View Details</a>
+      </div>
+
+      <div class="card">
+        <h3>TVS Ntorq 125</h3>
+        <p>Sporty scooter with SmartXonnect.</p>
+        <a href="models/ntorq125.html">View Details</a>
+      </div>
+
+      <div class="card">
+        <h3>Apache Series</h3>
+        <p>RTR 160, 200 & RR 310 motorcycles.</p>
+        <a href="models/apache160.html">Explore Apache</a>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Why Tirumala TVS</h2>
+    <ul>
+      <li>Authorized TVS Motor Company dealer</li>
+      <li>Complete range of TVS products</li>
+      <li>Test rides, finance & insurance support</li>
+      <li>Reliable after-sales service</li>
+    </ul>
+  </section>
+
+</main>
+
+<footer>
+  <div class="footer-inner">
+    © 2026 Tirumala TVS. All rights reserved.
+  </div>
+</footer>
+
+</body>
+</html>
