--- a/models.html
+++ b/models.html
@@ -1,131 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>TVS Models | Tirumala TVS Bengaluru</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Browse all TVS bikes, scooters and electric vehicles at Tirumala TVS, Bidarahalli Bengaluru." />
-  <link rel="stylesheet" href="css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Explore all TVS bikes, scooters, mopeds and electric vehicles at Tirumala TVS.">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-<!-- HEADER -->
-<header style="background:#fff;border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:14px 16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
+<header>
+  <div class="header-container">
+    <h2>Tirumala TVS</h2>
     <nav>
-      <a href="index.html" style="margin-right:18px;">Home</a>
-      <a href="models.html" style="margin-right:18px;font-weight:600;">Models</a>
+      <a href="index.html">Home</a>
+      <a href="models.html">Models</a>
       <a href="contacts.html">Contact</a>
     </nav>
   </div>
 </header>
 
-<!-- HERO -->
-<section style="background:linear-gradient(120deg,#1e40af,#0b4fd8);color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:44px;margin-bottom:10px;">Explore TVS Models</h1>
-    <p style="font-size:18px;max-width:800px;">
-      Scooters, motorcycles and electric vehicles from TVS Motor Company.
-      Click any model to view price, specifications and features.
-    </p>
+<section class="hero">
+  <div class="hero-inner">
+    <h1>TVS Models</h1>
+    <p>Browse the complete TVS two-wheeler lineup</p>
   </div>
 </section>
 
-<!-- MODELS -->
-<main style="max-width:1200px;margin:auto;padding:50px 16px;">
+<main class="container">
 
-  <!-- SCOOTERS -->
-  <section style="margin-bottom:70px;">
-    <h2>🛵 TVS Scooters</h2>
-
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:22px;margin-top:22px;">
-
-      <div class="model-card" style="background:#eff6ff;">
-        <h3>TVS XL 100</h3>
-        <p>Legendary moped trusted for business & daily work.</p>
-        <a href="models/xl100.html">View Details →</a>
-      </div>
-
-      <div class="model-card" style="background:#f0fdf4;">
-        <h3>TVS Zest 110</h3>
-        <p>Lightweight scooter for smooth city rides.</p>
-        <a href="models/zest110.html">View Details →</a>
-      </div>
-
-      <div class="model-card" style="background:#fff7ed;">
-        <h3>TVS Jupiter 113</h3>
-        <p>Comfort-first family scooter.</p>
-        <a href="models/jupiter113.html">View Details →</a>
-      </div>
-
-      <div class="model-card" style="background:#fef2f2;">
-        <h3>TVS Jupiter 125</h3>
-        <p>Premium performance scooter.</p>
-        <a href="models/jupiter125.html">View Details →</a>
-      </div>
-
-      <div class="model-card" style="background:#ecfeff;">
-        <h3>TVS Ntorq 125</h3>
-        <p>Sporty scooter with SmartXonnect.</p>
-        <a href="models/ntorq125.html">View Details →</a>
-      </div>
-
-      <div class="model-card" style="background:#fdf4ff;">
-        <h3>TVS Ntorq 150</h3>
-        <p>High-performance racing scooter.</p>
-        <a href="models/ntorq150.html">View Details →</a>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- MOTORCYCLES -->
-  <section style="margin-bottom:70px;">
-    <h2>🏍 TVS Motorcycles</h2>
-
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:22px;margin-top:22px;">
-
-      <div class="model-card" style="background:#f0fdf4;">
-        <h3>TVS Raider</h3>
-        <p>Sporty commuter motorcycle.</p>
-        <a href="models/raider.html">View Details →</a>
-      </div>
-
-      <div class="model-card" style="background:#fff7ed;">
-        <h3>TVS Ronin</h3>
-        <p>Modern-retro premium motorcycle.</p>
-        <a href="models/ronin.html">View Details →</a>
-      </div>
-
-      <div class="model-card" style="background:#eff6ff;">
-        <h3>Apache RTR Series</h3>
-        <p>160, 200 & RR 310 performance motorcycles.</p>
-        <a href="models/apache160.html">View Apache Range →</a>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- ELECTRIC -->
   <section>
-    <h2>⚡ Electric Vehicles</h2>
+    <h2>Scooters & Mopeds</h2>
+    <div class="cards">
+      <div class="card"><h3>TVS XL 100</h3><p>Work-focused moped.</p><a href="models/xl100.html">View</a></div>
+      <div class="card"><h3>TVS Zest 110</h3><p>Lightweight city scooter.</p><a href="models/zest110.html">View</a></div>
+      <div class="card"><h3>TVS Jupiter 113</h3><p>Comfort scooter.</p><a href="models/jupiter113.html">View</a></div>
+      <div class="card"><h3>TVS Jupiter 125</h3><p>Premium scooter.</p><a href="models/jupiter125.html">View</a></div>
+      <div class="card"><h3>TVS Ntorq 125</h3><p>Sporty performance.</p><a href="models/ntorq125.html">View</a></div>
+      <div class="card"><h3>TVS Ntorq 150</h3><p>High performance.</p><a href="models/ntorq150.html">View</a></div>
+    </div>
+  </section>
 
-    <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:22px;margin-top:22px;">
-      <div class="model-card" style="background:#f0fdf4;">
+  <section>
+    <h2>Motorcycles</h2>
+    <div class="cards">
+      <div class="card"><h3>TVS Raider</h3><p>Sporty commuter.</p><a href="models/raider.html">View</a></div>
+      <div class="card"><h3>TVS Ronin</h3><p>Modern-retro motorcycle.</p><a href="models/ronin.html">View</a></div>
+      <div class="card"><h3>Apache Series</h3><p>160 / 200 / RR 310.</p><a href="models/apache160.html">Explore</a></div>
+    </div>
+  </section>
+
+  <section id="electric">
+    <h2>Electric</h2>
+    <div class="cards">
+      <div class="card">
         <h3>TVS iQube</h3>
-        <p>Smart electric scooter for urban mobility.</p>
-        <a href="models/iqube.html">View Details →</a>
+        <p>Smart electric scooter.</p>
+        <a href="models/iqube.html">View</a>
       </div>
     </div>
   </section>
 
 </main>
 
-<!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:18px 16px;text-align:center;">
+<footer>
+  <div class="footer-inner">
     © 2026 Tirumala TVS. All rights reserved.
   </div>
 </footer>
