--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Tirumala TVS | Authorized TVS Dealer Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Tirumala TVS is an authorized TVS dealer in Bidarahalli, Bengaluru. Explore bikes, scooters, electric vehicles, test rides and service.">
+  <meta name="description" content="Authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes, scooters, EVs, test rides and service.">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -21,84 +21,82 @@
   </div>
 </header>
 
+<!-- TVS BANNER / HERO -->
 <section class="hero">
   <div class="hero-inner">
-    <h1>Authorized TVS Dealer in Bengaluru</h1>
+    <h1>Discover Your Perfect TVS Two-Wheeler</h1>
     <p>
-      Sales • Service • Genuine Spare Parts • Finance & Insurance<br>
-      <strong>Bidarahalli, Bengaluru</strong>
+      Bikes • Scooters • Electric Vehicles<br>
+      <strong>Authorized TVS Dealer – Bidarahalli, Bengaluru</strong>
     </p>
+
+    <div style="margin-top:20px;">
+      <a href="models.html" class="btn red">Browse Models</a>
+      <a href="contacts.html" class="btn green">Book Test Ride</a>
+    </div>
   </div>
 </section>
 
 <main class="container">
 
+  <!-- QUICK ACTIONS -->
   <section>
     <h2>Quick Actions</h2>
     <div class="cards">
       <div class="card">
-        <h3>Browse Models</h3>
-        <p>Explore all TVS bikes, scooters and EVs.</p>
-        <a href="models.html">View Models</a>
+        <h3>Compare TVS Models</h3>
+        <p>View specifications, variants and prices.</p>
+        <a href="models.html" class="btn">View Models</a>
       </div>
 
       <div class="card">
         <h3>Book Test Ride</h3>
-        <p>Experience your favourite TVS vehicle.</p>
-        <a href="contacts.html">Book Now</a>
+        <p>Experience your favourite TVS bike or scooter.</p>
+        <a href="contacts.html" class="btn green">Book Now</a>
       </div>
 
       <div class="card">
-        <h3>Book Service</h3>
-        <p>Authorized service with genuine parts.</p>
-        <a href="contacts.html">Book Service</a>
+        <h3>Authorized Service</h3>
+        <p>Genuine parts and trained technicians.</p>
+        <a href="contacts.html" class="btn">Book Service</a>
       </div>
 
       <div class="card">
-        <h3>Explore Electric</h3>
-        <p>Discover TVS iQube electric scooters.</p>
-        <a href="models.html#electric">View EVs</a>
+        <h3>Electric Mobility</h3>
+        <p>Explore TVS iQube electric scooters.</p>
+        <a href="models/iqube.html" class="btn">Explore EV</a>
       </div>
     </div>
   </section>
 
+  <!-- POPULAR MODELS -->
   <section>
     <h2>Popular TVS Models</h2>
     <div class="cards">
       <div class="card">
         <h3>TVS XL 100</h3>
-        <p>Trusted moped for daily work & business.</p>
-        <a href="models/xl100.html">View Details</a>
+        <p>India’s most trusted work moped.</p>
+        <a href="models/xl100.html" class="btn">View Details</a>
       </div>
 
       <div class="card">
         <h3>TVS Jupiter 113</h3>
-        <p>Comfort-first family scooter.</p>
-        <a href="models/jupiter113.html">View Details</a>
+        <p>Comfort-focused family scooter.</p>
+        <a href="models/jupiter113.html" class="btn">View Details</a>
       </div>
 
       <div class="card">
         <h3>TVS Ntorq 125</h3>
         <p>Sporty scooter with SmartXonnect.</p>
-        <a href="models/ntorq125.html">View Details</a>
+        <a href="models/ntorq125.html" class="btn">View Details</a>
       </div>
 
       <div class="card">
         <h3>Apache Series</h3>
-        <p>RTR 160, 200 & RR 310 motorcycles.</p>
-        <a href="models/apache160.html">Explore Apache</a>
+        <p>RTR 160 • RTR 200 • RR 310</p>
+        <a href="models/apache160.html" class="btn">Explore Apache</a>
       </div>
     </div>
-  </section>
-
-  <section>
-    <h2>Why Tirumala TVS</h2>
-    <ul>
-      <li>Authorized TVS Motor Company dealer</li>
-      <li>Complete range of TVS products</li>
-      <li>Test rides, finance & insurance support</li>
-      <li>Reliable after-sales service</li>
-    </ul>
   </section>
 
 </main>
