--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tirumala TVS | Authorized TVS Dealer Bengaluru</title>
+  <title>Tirumala TVS | Authorized TVS Dealer in Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Tirumala TVS is an authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes, scooters, EVs, prices, offers, test rides and service booking.">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
+<!-- HEADER -->
 <header>
   <div class="header-container">
     <h2>Tirumala TVS</h2>
@@ -20,34 +22,136 @@
   </div>
 </header>
 
+<!-- HERO -->
 <section class="hero">
   <div class="hero-inner">
-    <h1>Authorized TVS Dealer – Bengaluru</h1>
-    <p>Bikes • Scooters • Electric Vehicles</p>
-    <div style="margin-top:18px;">
-      <a href="models.html" class="btn red">Browse Models</a>
+    <h1>Your Trusted TVS Two-Wheeler Destination</h1>
+    <p>
+      Authorized TVS Dealer in Bidarahalli, Bengaluru<br>
+      Sales • Service • Genuine Parts • Finance & Insurance
+    </p>
+    <div style="margin-top:22px;">
+      <a href="models.html" class="btn orange">View All Models</a>
       <a href="contacts.html" class="btn green">Book Test Ride</a>
     </div>
   </div>
 </section>
 
+<!-- MAIN CONTENT -->
 <main class="container">
 
+  <!-- ABOUT -->
   <section>
-    <h2>Popular Models</h2>
+    <h2>About Tirumala TVS</h2>
+    <p>
+      Tirumala TVS is an authorized dealership of TVS Motor Company, serving customers
+      in and around Bidarahalli, Bengaluru. We offer the complete range of TVS motorcycles,
+      scooters, mopeds and electric vehicles backed by professional sales support and
+      reliable after-sales service.
+    </p>
+    <p>
+      Whether you are looking for a daily commuter, a family scooter, a performance bike
+      or an electric vehicle, Tirumala TVS helps you choose the right two-wheeler with
+      transparent pricing and easy finance options.
+    </p>
+  </section>
+
+  <!-- QUICK ACTIONS -->
+  <section>
+    <h2>Quick Actions</h2>
     <div class="cards">
-      <div class="card"><h3>TVS XL 100</h3><a class="btn" href="models/xl100.html">View</a></div>
-      <div class="card"><h3>TVS Jupiter</h3><a class="btn" href="models/jupiter113.html">View</a></div>
-      <div class="card"><h3>TVS Ntorq</h3><a class="btn" href="models/ntorq125.html">View</a></div>
-      <div class="card"><h3>Apache</h3><a class="btn" href="models/apache160.html">Explore</a></div>
+      <div class="card">
+        <h3>Browse TVS Models</h3>
+        <p>Explore specifications, variants and features of all TVS two-wheelers.</p>
+        <a href="models.html" class="btn">Explore Models</a>
+      </div>
+
+      <div class="card">
+        <h3>Book Test Ride</h3>
+        <p>Experience your favourite TVS bike or scooter before you decide.</p>
+        <a href="contacts.html" class="btn green">Book Test Ride</a>
+      </div>
+
+      <div class="card">
+        <h3>Get On-Road Price</h3>
+        <p>Request latest prices, offers and EMI options.</p>
+        <a href="contacts.html" class="btn">Get Quotation</a>
+      </div>
+
+      <div class="card">
+        <h3>Book Service</h3>
+        <p>Authorized TVS service using genuine spare parts.</p>
+        <a href="contacts.html" class="btn">Book Service</a>
+      </div>
     </div>
+  </section>
+
+  <!-- POPULAR MODELS -->
+  <section>
+    <h2>Popular TVS Models</h2>
+    <div class="cards">
+
+      <div class="card">
+        <h3>TVS XL 100</h3>
+        <p>India’s most trusted moped for daily work and business use.</p>
+        <a href="models/xl100.html" class="btn">View Details</a>
+      </div>
+
+      <div class="card">
+        <h3>TVS Jupiter 113</h3>
+        <p>Comfort-focused family scooter with smooth ride quality.</p>
+        <a href="models/jupiter113.html" class="btn">View Details</a>
+      </div>
+
+      <div class="card">
+        <h3>TVS Ntorq 125</h3>
+        <p>Sporty performance scooter with SmartXonnect features.</p>
+        <a href="models/ntorq125.html" class="btn">View Details</a>
+      </div>
+
+      <div class="card">
+        <h3>TVS Raider</h3>
+        <p>Modern commuter motorcycle with sporty styling.</p>
+        <a href="models/raider.html" class="btn">View Details</a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- TVS ELECTRIC -->
+  <section>
+    <h2>Electric Mobility by TVS</h2>
+    <p>
+      TVS iQube represents the future of urban mobility with smart connectivity,
+      strong build quality and reliable electric performance.
+    </p>
+    <div class="cards">
+      <div class="card">
+        <h3>TVS iQube</h3>
+        <p>Smart electric scooter with connected features.</p>
+        <a href="models/iqube.html" class="btn green">Explore iQube</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- WHY CHOOSE -->
+  <section>
+    <h2>Why Choose Tirumala TVS</h2>
+    <ul>
+      <li>Authorized TVS Motor Company dealer</li>
+      <li>Complete range of TVS two-wheelers</li>
+      <li>Easy finance, EMI and insurance assistance</li>
+      <li>Trained service technicians & genuine parts</li>
+      <li>Customer-focused sales & after-sales support</li>
+    </ul>
   </section>
 
 </main>
 
+<!-- FOOTER -->
 <footer>
   <div class="footer-inner">
-    © 2026 Tirumala TVS. All rights reserved.
+    © 2026 Tirumala TVS, Bidarahalli Bengaluru. All rights reserved.
   </div>
 </footer>
 
