--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tirumala TVS | Authorized TVS Dealer in Bengaluru</title>
+  <title>Tirumala TVS | Authorized TVS Dealer Bengaluru</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Tirumala TVS is an authorized TVS dealer in Bidarahalli, Bengaluru. Explore TVS bikes, scooters, EVs, prices, offers, test rides and service booking.">
   <link rel="stylesheet" href="css/style.css">
@@ -10,7 +10,6 @@
 
 <body>
 
-<!-- HEADER -->
 <header>
   <div class="header-container">
     <h2>Tirumala TVS</h2>
@@ -22,133 +21,68 @@
   </div>
 </header>
 
-<!-- HERO -->
 <section class="hero">
   <div class="hero-inner">
-    <h1>Your Trusted TVS Two-Wheeler Destination</h1>
+    <h1>TVS Racing DNA. Trusted Local Dealer.</h1>
     <p>
-      Authorized TVS Dealer in Bidarahalli, Bengaluru<br>
-      Sales • Service • Genuine Parts • Finance & Insurance
+      Authorized TVS Dealer – Bidarahalli, Bengaluru<br>
+      Bikes • Scooters • Electric Vehicles
     </p>
     <div style="margin-top:22px;">
-      <a href="models.html" class="btn orange">View All Models</a>
-      <a href="contacts.html" class="btn green">Book Test Ride</a>
+      <a href="models.html" class="btn">Explore Models</a>
+      <a href="contacts.html" class="btn blue">Book Test Ride</a>
     </div>
   </div>
 </section>
 
-<!-- MAIN CONTENT -->
 <main class="container">
 
-  <!-- ABOUT -->
   <section>
-    <h2>About Tirumala TVS</h2>
+    <h2>About TVS Motor Company</h2>
     <p>
-      Tirumala TVS is an authorized dealership of TVS Motor Company, serving customers
-      in and around Bidarahalli, Bengaluru. We offer the complete range of TVS motorcycles,
-      scooters, mopeds and electric vehicles backed by professional sales support and
-      reliable after-sales service.
+      TVS Motor Company is one of India’s most respected two-wheeler manufacturers
+      with a legacy of over 100 years. Present in more than 80 countries,
+      TVS is known globally for innovation, racing performance and quality engineering.
     </p>
     <p>
-      Whether you are looking for a daily commuter, a family scooter, a performance bike
-      or an electric vehicle, Tirumala TVS helps you choose the right two-wheeler with
-      transparent pricing and easy finance options.
+      The Apache series reflects TVS Racing DNA, while scooters like Jupiter and Ntorq
+      dominate Indian roads. TVS iQube leads the shift towards smart electric mobility.
     </p>
   </section>
 
-  <!-- QUICK ACTIONS -->
   <section>
-    <h2>Quick Actions</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>Browse TVS Models</h3>
-        <p>Explore specifications, variants and features of all TVS two-wheelers.</p>
-        <a href="models.html" class="btn">Explore Models</a>
-      </div>
-
-      <div class="card">
-        <h3>Book Test Ride</h3>
-        <p>Experience your favourite TVS bike or scooter before you decide.</p>
-        <a href="contacts.html" class="btn green">Book Test Ride</a>
-      </div>
-
-      <div class="card">
-        <h3>Get On-Road Price</h3>
-        <p>Request latest prices, offers and EMI options.</p>
-        <a href="contacts.html" class="btn">Get Quotation</a>
-      </div>
-
-      <div class="card">
-        <h3>Book Service</h3>
-        <p>Authorized TVS service using genuine spare parts.</p>
-        <a href="contacts.html" class="btn">Book Service</a>
-      </div>
-    </div>
+    <h2>Awards & Recognition</h2>
+    <ul>
+      <li>Indian Motorcycle of the Year – TVS Apache / Raider</li>
+      <li>TVS Racing – Multiple national championships</li>
+      <li>Trusted Brand Awards across India</li>
+      <li>TVS iQube – Popular electric scooter in India</li>
+    </ul>
   </section>
 
-  <!-- POPULAR MODELS -->
-  <section>
-    <h2>Popular TVS Models</h2>
-    <div class="cards">
-
-      <div class="card">
-        <h3>TVS XL 100</h3>
-        <p>India’s most trusted moped for daily work and business use.</p>
-        <a href="models/xl100.html" class="btn">View Details</a>
-      </div>
-
-      <div class="card">
-        <h3>TVS Jupiter 113</h3>
-        <p>Comfort-focused family scooter with smooth ride quality.</p>
-        <a href="models/jupiter113.html" class="btn">View Details</a>
-      </div>
-
-      <div class="card">
-        <h3>TVS Ntorq 125</h3>
-        <p>Sporty performance scooter with SmartXonnect features.</p>
-        <a href="models/ntorq125.html" class="btn">View Details</a>
-      </div>
-
-      <div class="card">
-        <h3>TVS Raider</h3>
-        <p>Modern commuter motorcycle with sporty styling.</p>
-        <a href="models/raider.html" class="btn">View Details</a>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- TVS ELECTRIC -->
-  <section>
-    <h2>Electric Mobility by TVS</h2>
-    <p>
-      TVS iQube represents the future of urban mobility with smart connectivity,
-      strong build quality and reliable electric performance.
-    </p>
-    <div class="cards">
-      <div class="card">
-        <h3>TVS iQube</h3>
-        <p>Smart electric scooter with connected features.</p>
-        <a href="models/iqube.html" class="btn green">Explore iQube</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- WHY CHOOSE -->
   <section>
     <h2>Why Choose Tirumala TVS</h2>
     <ul>
-      <li>Authorized TVS Motor Company dealer</li>
+      <li>Authorized TVS Motor Company dealership</li>
       <li>Complete range of TVS two-wheelers</li>
-      <li>Easy finance, EMI and insurance assistance</li>
-      <li>Trained service technicians & genuine parts</li>
-      <li>Customer-focused sales & after-sales support</li>
+      <li>Easy finance, EMI & insurance assistance</li>
+      <li>Test rides & transparent pricing</li>
+      <li>Reliable after-sales service & genuine parts</li>
     </ul>
+  </section>
+
+  <section>
+    <h2>Popular TVS Products</h2>
+    <div class="cards">
+      <div class="card"><h3>TVS Apache Series</h3><p>160 • 200 • RR 310 performance bikes</p><a href="models/apache160.html" class="btn blue">Explore Apache</a></div>
+      <div class="card"><h3>TVS Ntorq 125</h3><p>Sporty scooter with SmartXonnect</p><a href="models/ntorq125.html" class="btn">View Details</a></div>
+      <div class="card"><h3>TVS Jupiter</h3><p>India’s trusted family scooter</p><a href="models/jupiter113.html" class="btn">View Details</a></div>
+      <div class="card"><h3>TVS iQube</h3><p>Smart electric scooter</p><a href="models/iqube.html" class="btn green">Explore EV</a></div>
+    </div>
   </section>
 
 </main>
 
-<!-- FOOTER -->
 <footer>
   <div class="footer-inner">
     © 2026 Tirumala TVS, Bidarahalli Bengaluru. All rights reserved.
